examples/failing/OrphanTypeDecl.purs
-- @shouldFailWith OrphanTypeDeclaration
module OrphanTypeDecl where

fn :: Number -> Boolean
